# jacred-proxy

./: Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  requirements.txt
jacred-proxy/: __init__.py  __main__.py  app.py  categories.py  config.py  constants.py  log.py  request_params.py  result_filters.py  season_filter.py  utils.py  wsgi.py
jacred-proxy/backend/: __init__.py  client.py  search.py  v1.py  v2.py
jacred-proxy/formats/: __init__.py  jackett_json.py  torznab_xml.py
jacred-proxy/routes/: __init__.py  jackett.py  system.py  torznab.py
